# voting_blockchain

./: CMakeLists.txt  Makefile  block.cpp  block.h  install.sh  main.cpp  readme.md
include/: block.h  blockchain.h
src/: block.cpp  main.cpp  network.cpp  vote.cpp
